@@ -39,3 +39,5 @@ serdo
 ftrigger
 waitinterface
 waitport
+powersave
+governor
